--- a/athlyte_search_information_centre.html
+++ b/athlyte_search_information_centre.html
@@ -66,26 +66,34 @@
   <!-- -------- FEATURES GRID -------- -->
   <section class="products" id="platform">
     <div class="product-grid">
-      <div class="product-card" onclick="location.href='#database'" tabindex="0">
+      <a href="login_page.html"><div class="product-card" onclick="location.href='#database'" tabindex="0">
+        <h3>Login Page</h3>
+        <p>Click here to know how to login into the Search Dashboard.</p>
+      </div> </a>
+      <a href="dashboard.html"><div class="product-card" onclick="location.href='#database'" tabindex="0">
         <h3>Search Dashboard</h3>
-        <p>A fully‑managed Postgres database with real‑time sports data streaming, backups, and more.</p>
-      </div>
-      <div class="product-card" onclick="location.href='#auth'" tabindex="0">
-        <h3>Query Builder</h3>
-        <p>Secure email/password, OAuth, and magic‑link logins to your Athlyte apps.</p>
-      </div>
-      <div class="product-card" onclick="location.href='#storage'" tabindex="0">
+        <p>Select a sport and entity (Player & Team), ask your question, and instantly get your desired data.</p>
+      </div> </a>
+      <a href="query_builder_updated.html"><div class="product-card" onclick="location.href='#auth'" tabindex="0">
+        <h3>How to write a Query</h3>
+        <p>Learn how to write queries with ease using this comprehensive step-by-step guide designed to assist with it.</p>
+      </div></a>
+      <a href="export.html"><div class="product-card" onclick="location.href='#storage'" tabindex="0">
         <h3>Export Data</h3>
-        <p>Store, organise, and serve large media files—integrated with granular access policies.</p>
-      </div>
-      <div class="product-card" onclick="location.href='#realtime'" tabindex="0">
+        <p>Download the data to your device with a single click.</p>
+      </div> </a>
+      <a href="report.html"><div class="product-card" onclick="location.href='#realtime'" tabindex="0">
         <h3>Report an Issue</h3>
-        <p>Stream live updates, sync app state, and broadcast data changes instantly.</p>
-      </div>
-      <div class="product-card" onclick="location.href='#edge'" tabindex="0">
+        <p>Encountered an issue? Learn how to report it to us, and we'll assist you promptly.</p>
+      </div></a>
+      <a href="data_centre.html"><div class="product-card" onclick="location.href='#edge'" tabindex="0">
         <h3>Data Centre</h3>
-        <p>Run server‑side logic close to your users worldwide for ultra‑low latency.</p>
-      </div>
+        <p>Know what all stats are available for exploration.</p>
+      </div></a>
+      <a href=""><div class="product-card" onclick="location.href='#database'" tabindex="0">
+        <h3>Know your Record</h3>
+        <p>Select a sport and entity (Player & Team), ask your question, and instantly get your desired data.</p>
+      </div> </a>
     </div>
   </section>
 
