--- a/login_page.html
+++ b/login_page.html
@@ -199,18 +199,6 @@
             </h1>
             <hr class="divider" />
 
-            <h2>New Registration</h2>
-            <p>New users are required to register. Upon completion of registration, new users will receive an email acknowledging their successful registration request.</p>
-            <figure>
-                <img src="Search New Registration.png" width="800" height="275" alt="Athlyte Search Dashboard Screenshot" />
-            </figure>
-
-            <p>Once your registration is approved, check your email for a password reset link.</p>
-            <figure>
-                <img src="Search Approve Request.png" width="700" height="275" alt="Athlyte Search Dashboard Screenshot" />
-            </figure>
-
-            <h2>Already Registered?</h2>
             <p>If you have already registered, follow the steps below:</p>
 
             <p>
@@ -218,13 +206,35 @@
             </p>
 
             <figure>
-                <img src="Search Login.png" width="800" height="400" alt="Athlyte Search Dashboard Screenshot" />
+                <img src="Search Login.png" width="700" height="370" alt="Athlyte Search Dashboard Screenshot" />
             </figure>
+            <h2>New Registration</h2>
+            <p>New users are required to Sign Up.</p>
+            <figure>
+                <img src="Search Registration.png" width="700" height="363
+                " alt="Athlyte Search Dashboard Screenshot" />
+            </figure>
+
+            <p>Select 'Outlook' to launch an email. All you need to do is enter your college name and website, then send it.</p>            
+            <figure>
+                <img src="Search Outlook.png" width="700" height="363" alt="Athlyte Search Dashboard Screenshot" />
+            </figure>
+
+            <figure>
+                <img src="Search Email.png" width="700" height="363" alt="Athlyte Search Dashboard Screenshot" />
+            </figure>
+
+            <p>Once your registration is approved, check your email for a password reset link.</p>
+            <figure>
+                <img src="Search Approve Request.png" width="700" height="363" alt="Athlyte Search Dashboard Screenshot" />
+            </figure>
+
+
         
             <h2>Forgot Password</h2>
             <p>If you forget your password, click on the "Forgot Password?" link. You'll be prompted to enter your email address. After entering your email, click the "Send Reset Link" button. An email will be sent to you with a link to reset your password.</p>
             <figure>
-                <img src="Search Reset Password.png" width="800" height="400" alt="Athlyte Search Dashboard Screenshot" />
+                <img src="Search Reset Password.png" width="700" height="363" alt="Athlyte Search Dashboard Screenshot" />
             </figure>
         </article>
     </main>
