--- a/dashboard.html
+++ b/dashboard.html
@@ -204,7 +204,7 @@
                 It supports various sports and provides detailed statistics on players and teams.
             </p>
             <figure>
-                <img src="Search.png" width="800" height="350" alt="Search Dashboard" />
+                <img src="Search.png" width="725" height="370" alt="Search" />
             </figure>
             <h4>Click <a href="streaks.html">here</a> to know more about how to write natural language queries.</h4>
 
@@ -235,20 +235,20 @@
                 </ul>
             </p>
             <figure>
-                <img src="Search Type.png" width="800" height="350" alt="Search Type" />
+                <img src="Search Types.png" width="725" height="370" alt="Search Types" />
             </figure>
 
             <h2>Result Screen</h2>
-            <p> The results screen displays the results of your query. </p>
+            <p> The result screen displays the results of your query. </p>
             <figure>
-                <img src="Search Dashboard.png" width="800" height="350" alt="Athlyte Search Dashboard Screenshot" />
+                <img src="Search Result.png" width="725" height="370" alt="Search Screen" />
             </figure>
 
             <h2>Filters</h2>
 
             <p> To further refine the results you can use the filters on the left side of the result table.</p>
             <figure>
-                <img src="Search Filter.png" width="800" height="350" alt="Athlyte Search Dashboard Screenshot" />
+                <img src="Search Filters.png" width="725" height="370" alt="Athlyte Search Dashboard Screenshot" />
             </figure>
 
             <table style="width:100%; border-collapse: separate; border-spacing: 0 15px;">
@@ -296,6 +296,13 @@
             </table>
 
             <p style="font-size:13px"><i> *Note: Highlighted filters apply only to Player-based searches and are not applicable for Team-based queries.</i></p>
+
+            <h2>Player Dashboard</h2>
+            <p> To get a detailed view of a player's statistics, including their performance in various games, click on the player name. This will take you to the Player Dashboard.</p>
+
+            <figure>
+                <img src="Search Player Dashboard.png" width="725" height="370" alt="Athlyte Search Dashboard Screenshot" />
+            </figure>
         </article>
     </main>
 </body>
