--- a/dashboard.html
+++ b/dashboard.html
@@ -200,13 +200,13 @@
             <hr class="divider" />
 
             <p>
-                The Athlyte Search Dashboard is a powerful tool that allows you to search for sports data using natural language queries. 
+                The Athlyte Search Dashboard is a powerful tool that allows you to search for sports data using natural language searches. 
                 It supports various sports and provides detailed statistics on players and teams.
             </p>
             <figure>
                 <img src="Search.png" width="725" height="370" alt="Search" />
             </figure>
-            <h4>Click <a href="streaks.html">here</a> to know more about how to write natural language queries.</h4>
+            <h4>Click <a href="streaks.html">here</a> to know more about how to write natural language searches.</h4>
 
 
             <h2 id="sports">
@@ -228,10 +228,10 @@
                 Search Type
             </h2>
 
-            <p>There are two sorts of stat queries that can be performed on every sport:
+            <p>There are two sorts of stat searches that can be performed on every sport:
                 <ul>
-                <li>Player-based queries</li>
-                <li>Team -based queries</li>
+                <li>Player-based searches</li>
+                <li>Team -based searches</li>
                 </ul>
             </p>
             <figure>
@@ -246,7 +246,7 @@
 
             <h2>Filters</h2>
 
-            <p> To further refine the results you can use the filters on the left side of the result table.</p>
+            <p> Use the filters on the left side of the result table to further refine your results.</p>
             <figure>
                 <img src="Search Filters.png" width="725" height="370" alt="Athlyte Search Dashboard Screenshot" />
             </figure>
@@ -295,7 +295,7 @@
                 </tr>
             </table>
 
-            <p style="font-size:13px"><i> *Note: Highlighted filters apply only to Player-based searches and are not applicable for Team-based queries.</i></p>
+            <p style="font-size:13px"><i> *Note: Highlighted filters apply only to Player-based searches and are not applicable for Team-based searches.</i></p>
 
             <h2>Player Dashboard</h2>
             <p> To get a detailed view of a player's statistics, including their performance in various games, click on the player name. This will take you to the Player Dashboard.</p>
