--- a/athlyte_search_information_centre.html
+++ b/athlyte_search_information_centre.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Athlyte's Search Information Centre</title>
+  <title>Athlyte's Search Information Center</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
@@ -59,8 +59,8 @@
 
   <!-- -------- HERO SECTION -------- -->
   <section class="hero">
-    <h1>Athlyte's Search Information Centre</h1>
-    <p>Learn how to look up complex, intricate sports data in an instant with just plain‑English queries.</p>
+    <h1>Athlyte's Search Information Center</h1>
+    <p>Learn how to look up complex sports data in an instant with just plain‑English searches.</p>
   </section>
 
   <!-- -------- FEATURES GRID -------- -->
@@ -68,15 +68,15 @@
     <div class="product-grid">
       <a href="login_page.html"><div class="product-card" onclick="location.href='#database'" tabindex="0">
         <h3>Login Page</h3>
-        <p>Click here to know how to login into the Search Dashboard.</p>
+        <p>Click here to learn how to login to the Search Dashboard.</p>
       </div> </a>
       <a href="dashboard.html"><div class="product-card" onclick="location.href='#database'" tabindex="0">
         <h3>Search Dashboard</h3>
-        <p>Select a sport and entity (Player & Team), ask your question, and instantly get your desired data.</p>
+        <p>Select a sport team or player, and get your data instantly.</p>
       </div> </a>
       <a href="query_builder_updated.html"><div class="product-card" onclick="location.href='#auth'" tabindex="0">
-        <h3>How to write a Query</h3>
-        <p>Learn how to write queries with ease using this comprehensive step-by-step guide designed to assist with it.</p>
+        <h3>How to search</h3>
+        <p>Learn how to search for your data with this step-by-step guide designed to assist with it.</p>
       </div></a>
       <a href="export.html"><div class="product-card" onclick="location.href='#storage'" tabindex="0">
         <h3>Export Data</h3>
@@ -84,16 +84,12 @@
       </div> </a>
       <a href="report.html"><div class="product-card" onclick="location.href='#realtime'" tabindex="0">
         <h3>Report an Issue</h3>
-        <p>Encountered an issue? Learn how to report it to us, and we'll assist you promptly.</p>
+        <p>Have an issue? Click here for troubleshooting assistance.</p>
       </div></a>
       <a href="data_centre.html"><div class="product-card" onclick="location.href='#edge'" tabindex="0">
         <h3>Data Centre</h3>
-        <p>Know what all stats are available for exploration.</p>
+        <p>Identify all the stats open for analysis.</p>
       </div></a>
-      <a href=""><div class="product-card" onclick="location.href='#database'" tabindex="0">
-        <h3>Know your Record</h3>
-        <p>Select a sport and entity (Player & Team), ask your question, and instantly get your desired data.</p>
-      </div> </a>
     </div>
   </section>
 
