--- a/query_builder_updated.html
+++ b/query_builder_updated.html
@@ -214,7 +214,7 @@ const qualifierOpts = [
 ];
 const CLASS_VALUES = ['Freshman','Sophomore','Junior','Senior', 'Graduate Student', 'Redshirt Freshman', 'Fifth-Year Senior'];
 const HOME_AWAY_VALUES = ['home games','away games', 'neutral site games'];
-const WIN_LOSS_VALUES = ['wins','losses', 'ties']; // Assuming ties for football
+const WIN_LOSS_VALUES = ['wins','losses']; // Assuming ties for football
 const CONF_VALUES = ['ACC','SEC','Big Ten','Pac‑12','Big 12','Big East','Mountain West','C-USA', 'MAC', 'Sun Belt'];
 const POSITION_VALUES_FOOTBALL = ['Quarterback','Running Back','Linebacker','Wide Receiver','Defensive End','Cornerback','Safety','Offensive Lineman', 'Defensive Tackle', 'Tight End', 'Kicker', 'Punter'];
 const POSITION_VALUES_BBALL = ['Guard','Forward','Center','Point Guard','Shooting Guard','Small Forward','Power Forward'];
