--- a/athlyte_search_information_centre.html
+++ b/athlyte_search_information_centre.html
@@ -90,6 +90,10 @@
         <h3>Data Centre</h3>
         <p>Identify all the stats open for analysis.</p>
       </div></a>
+      <a href="add the html file here"><div class="product-card" onclick="location.href='#edge'" tabindex="0">
+        <h3>Know your record</h3>
+        <p>Data and Sources.</p>
+      </div></a>
     </div>
   </section>
 
